[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "grdl-sartoolbox"
version = "0.1.0"
description = "Python port of NGA MATLAB SAR Toolbox - SAR processing algorithms"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "geoint.org", email = "noreply@geoint.org"}
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "grdl>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ngageoint/grdl-sartoolbox"
Repository = "https://github.com/ngageoint/grdl-sartoolbox"

[project.entry-points."grdl.processors"]
sartoolbox = "grdl_sartoolbox.processing"

[project.entry-points."grdk.catalogs"]
sartoolbox = "grdl_sartoolbox:catalog.yaml"

[tool.setuptools.packages.find]
where = ["."]
include = ["grdl_sartoolbox*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["catalog.yaml"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=grdl_sartoolbox --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
